# InsightProject

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
api/: Dockerfile  main.py
docs/: PROJECT-SPEC.md  llm-fundamentals-cheatsheet.md
sandbox/: Dockerfile
scripts/: analyze.py  ask.py  chart.py  download_spider.py  eval_spider.py  hello_bailian.py  init_db.py  load_olist.py  predict_spider.py  score_spider.py
scripts/demos/: chart.py  hello_bailian.py  orchestrate.py  single_agent.py
scripts/eval/: critic_ab.py  olist_ex.py  olist_judge.py  run_agent_eval.py
scripts/spider/: predict_spider.py
src/insight/: __init__.py  agent.py  agent_base.py  analysis.py  analysis_agent.py  code_exec.py  config.py  db.py  errors.py  evaluation.py  llm.py  paths.py  text2sql.py
src/insight/agents/: __init__.py  agent_tools.py  analysis.py  analysis_agent.py  base.py  critic.py  critic_agent.py  orchestrator.py  report_agent.py  schema_context.py  single_agent.py  text2sql.py  text2sql_agent.py
src/insight/eval/: __init__.py  agent_eval.py  judge.py  olist_eval.py
src/insight/tools/: __init__.py  db.py  llm.py
tests/: conftest.py  test_agent.py  test_agent_eval.py  test_agent_tools.py  test_analysis.py  test_api.py  test_code_exec.py  test_db.py  test_evaluation.py  test_judge.py  test_olist_eval.py  test_orchestrator.py  test_schema_context.py
