[project]
name = "insightproject"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "langfuse>=4.9.1",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.20.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insight"]

[tool.pytest.ini_options]
testpaths = ["tests"]        # ← 你已有的，别动
pythonpath = ["."]           # ← 新增：把项目根加进 sys.path，让 api 可导入
